[gd_scene load_steps=5 format=3 uid="uid://bwprk6p4dh68f"]

[ext_resource type="Script" uid="uid://dgbxjaubk8iss" path="res://ui/settings_menu/tabs/display/display.gd" id="1_m3qch"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mqlk8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_57iii"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g7ija"]

[node name="Display" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m3qch")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FullscreenSetting" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/FullscreenSetting"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Fullscreen"

[node name="FullscreenCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/FullscreenSetting"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer/FullscreenSetting"]
layout_mode = 2
theme_override_constants/separation = 25
theme_override_styles/separator = SubResource("StyleBoxEmpty_mqlk8")

[node name="BorderlessSetting" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="BorderlessLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/BorderlessSetting"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Borderless"

[node name="BorderlessCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/BorderlessSetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="VSeparator" type="VSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer/BorderlessSetting"]
layout_mode = 2
theme_override_constants/separation = 25
theme_override_styles/separator = SubResource("StyleBoxEmpty_57iii")

[node name="VSyncSetting" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VSyncLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/VSyncSetting"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "V-Sync"

[node name="VSyncCheckbox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/VSyncSetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="VSeparator" type="VSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer/VSyncSetting"]
layout_mode = 2
theme_override_constants/separation = 25
theme_override_styles/separator = SubResource("StyleBoxEmpty_57iii")

[node name="Resolution" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Resolution"

[node name="ResolutionButton" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/Resolution"]
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="VSeparator" type="VSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer/Resolution"]
layout_mode = 2
theme_override_constants/separation = 25
theme_override_styles/separator = SubResource("StyleBoxEmpty_g7ija")

[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/FullscreenSetting/FullscreenCheckbox" to="." method="_on_fullscreen_checkbox_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/BorderlessSetting/BorderlessCheckbox" to="." method="_on_borderless_checkbox_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/VSyncSetting/VSyncCheckbox" to="." method="_on_v_sync_checkbox_toggled"]
[connection signal="item_selected" from="MarginContainer/ScrollContainer/VBoxContainer/Resolution/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
